# parse-ebnf

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: buildDocs.yml  python-publish.yml  python-test.yml  sphinx-gh-pages.yml
docs/: classes.rst  conf.py  errors.rst  index.rst  parsing.rst  testing.rst  tree.rst  tree_structure
parse_ebnf/: __about__.py  __init__.py  nodes.py  parsing.py
tests/: __init__.py  test_ast_example.py  test_parser.py  test_parser_invalid.py  test_parser_valid.py  test_readme_example.py
tests/resources/invalid/: ambiguosDefinitionListSeparator1.ebnf  ambiguosDefinitionListSeparator2.ebnf  ambiguosDefinitionListSeparator3.ebnf  defEOF.ebnf  malformedCommentEnd.ebnf  malformedCommentStart.ebnf  multipleExceptions.ebnf  multipleRepetitions.ebnf  unexpectedAtFile.ebnf  unterminatedTerm.ebnf
tests/resources/valid/: comment.ebnf  ebnfwiki.ebnf  emptyProduct.ebnf  emptyStrings.ebnf  fortran66Line.ebnf  insts.ebnf  weirdIdentifiers.ebnf
tests/tree_structure/: Comment.py  Definition.py  DefinitionList.py  EmptyString.py  Exception.py  Group.py  Identifier.py  Literal.py  Number.py  Option.py  Product.py  Repeat.py  Repetition.py  Root.py  Space.py  Special.py  Term.py  Terminal.py  Text.py  __init__.py
