[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parse-ebnf"
description = 'A parse tree generator for extended Backus-Naur form.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["EBNF", "Parser", "Parse tree", "Extended Backus-Naur Form"]
authors = [
  { name = "ChaosInventor", email = "chaosinventor@yandex.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/ChaosInventor/parse-ebnf#readme"
Issues = "https://github.com/ChaosInventor/parse-ebnf/issues"
Source = "https://github.com/ChaosInventor/parse-ebnf"

[tool.hatch.version]
path = "parse_ebnf/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=parse_ebnf --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "parse_ebnf/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
